<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTC!</string>
    <string name="lang_code">EN</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="dashboard_btn_schedule">Schedule</string>
    <string name="dashboard_btn_sessions">Tracks</string>
    <string name="dashboard_btn_speaker">Speaker</string>
    <string name="dashboard_btn_twitter">Twitter</string>
    <string name="dashboard_btn_fav">Favorites</string>
    <string name="dashboard_btn_map">Orientation</string>
    <string name="dashboard_dialog_download">Downloading data…</string>
    <string name="dashboard_counter_week">week</string>
    <string name="dashboard_counter_day">day</string>
    <string name="dashboard_counter_weeks">weeks</string>
    <string name="dashboard_counter_days">days</string>
    <string name="dashboard_counter_hours">hours</string>
    <string name="dashboard_counter_and">and</string>
    <string name="dashboard_counter_until">\nuntil MTC!</string>
    <string name="dashboard_counter_ready">Welcome to MTC! 2014!</string> <!-- Eddie Li Change for upcoming MTC -->
    <string name="dashboard_dia_no_net_title">No Internet connection</string>
    <string name="dashboard_dia_no_net_msg">You need an active Internet connection to download the initial data. Please enable a connection to the Internet and try it again!</string>
    <string name="dashboard_dia_no_wlan_title">No WLAN connection</string>
    <string name="dashboard_dia_no_wlan_msg">No active WLAN connection found. Do you want to use the mobile network for the download of the data (~1mb)?</string>
    <string name="dashboard_toast_no_inet">No Internet connection!</string>
    <string name="location_title">Orientation</string>
    <string name="location_show_map">Show map and navigate via</string>
    <string name="location_send_via_email">Send Email via</string>
    <string name="imageviewer_dialog_load">Loading image…</string>
    <string name="schedule_title">Schedule</string>
    <string name="schedule_day">Day</string>
    <string name="twitter_title">Twitter</string>
    <string name="twitter_dia_load_tweets">Loading tweets…</string>
    <string name="twitter_tweet_tweeted_at">tweeted at</string>
    <string name="twitter_tweet_tweeted">tweeted</string>
    <string name="twitter_tweet_just_now">just now</string>
    <string name="twitter_tweet_about">about</string>
    <string name="twitter_tweet_minute_ago">minute ago</string>
    <string name="twitter_tweet_minutes_ago">minutes ago</string>
    <string name="twitter_tweet_hour_ago">hour ago</string>
    <string name="twitter_tweet_hours_ago">hours ago</string>
    <string name="speaker_details_title">Speaker Details</string>
    <string name="speaker_details_sessions">Sessions</string>
    <string name="speaker_title">Speaker</string>
    <string name="sessions_title">Tracks</string>
    <string name="sessions_all_sessions">All Tracks</string>
    <string name="session_details_title">Session Details</string>
    <string name="session_details_speaker">Speaker</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_no_entries">No favorites!</string>
    <string name="orientation_location">Location</string>
    <string name="orientation_floorplan">Floorplan</string>
    <string name="orientation_feedback">Feedback</string>
    <string name="room_label">Room:</string>
    <string name="dashboard_date">17th - 20th March 2014</string> <!-- Eddie Li Change for upcoming MTC date -->
	<string name="database_name">mtc.db</string>
	<string name="server_url">http://mobiletechcon.de/2014se/data/conference/all.json</string>
</resources>
