<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultParentLayout" >

    <LinearLayout style="@style/ActionBar" >

        <ImageButton style="@style/ActionBarHomeButton" />

        <ImageView style="@style/ActionBarSeparator" />

        <TextView
            style="@style/ActionBarTitle"
            android:text="@string/session_details_title" />
    </LinearLayout>

    <LinearLayout style="@style/Divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            style="@style/DefaultParentLayout"
            android:layout_height="wrap_content"
            android:padding="11dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/sessionDetailSessionTitle"
                    style="@style/DetailListTitle"
                    android:text="@string/sessions_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/area_rounded_top"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="5dp"
                            android:paddingTop="8dp" >

                            <ImageView
                                android:id="@+id/sessionDetailImg"
                                style="@style/TrackIconSessionDetail" />

                            <TextView
                                android:id="@+id/sessionDetailTrack"
                                style="@style/TrackSessionDetail"
                                android:text="keynote"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/sessionDetailTitle"
                            style="@style/SessionFullTitle"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:ellipsize="end"
                            android:text="Title"
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp" >

                            <LinearLayout
                                style="@style/DetailElement"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/sessionDetailTime"
                                    style="@style/SessionInfo"
                                    android:paddingBottom="0dip"
                                    android:paddingTop="5dip" />

                                <TextView
                                    android:id="@+id/sessionDetailLocation"
                                    style="@style/SessionInfo"
                                    android:text="Room"
                                    android:textStyle="italic"
                                    android:visibility="gone" />
                            </LinearLayout>

                            <ToggleButton
                                android:id="@+id/sessionDetailFavorite"
                                style="@style/FavoriteButton"
                                android:layout_marginLeft="5dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    style="@style/DetailElement"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/area_rounded_bottom"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp" >

                    <WebView
                        android:id="@+id/sessionDetailDesc"
                        style="@style/DetailDescription"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp" />
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/sessionDetailSpeakerTitle"
                        style="@style/DetailListTitle"
                        android:layout_height="wrap_content"
                        android:text="@string/session_details_speaker" />

                    <ListView
                        android:id="@+id/sessionDetailSpeakerlist"
                        style="@style/DefaultList"
                        android:background="@drawable/area_rounded"
                        android:padding="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>